Bug fix on header & added animations to other screens
 - Fixed header & message overlap bug
 - Added animations to all main tags and nav tags

--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,6 @@
 .header-wrapper {
   position: fixed;
+  z-index: 2;
   top: 0;
   width: 100%;
   background-color: white;
